hphp/test/slow/traits/requireclass/asm_requirethisas_02.hhas.expectf
Fatal error: Assembler Error: line 9: .require this should be followed by as in %s/requireclass/asm_requirethisas_02.hhas on line -1
